# app/modules/user/user.route.ts
@@ -2,6 +2,7 @@ import { Router } from "express";
 import { catchError } from "../../common/middleware/cath-error.middleware";
 import * as userController from "./user.controller";
 import * as userValidator from "./user.validation";
+import { roleAuthMiddleware } from "../../common/middleware/role-auth.middleware";
 
 const router = Router();
 
@@ -11,6 +12,7 @@ router.delete("/:id", userController.deleteUser);
 router.post("/", userValidator.createUser, catchError, userController.createUser);
 router.patch("/:id", catchError, userController.editUser);
 router.put("/:id", catchError, userController.updateUser);
-router.post("/logout", catchError, userController.logoutUser);
+router.post("/login", catchError, userController.loginUser);
+router.post("/logout", catchError, roleAuthMiddleware, userController.logoutUser);
 
 export default router;
